--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 new_data.xlsx
-
+requirements.txt
 # C extensions
 *.so
 empa_users.csv
@@ -18,6 +18,7 @@ eggs/
 lib/
 lib64/
 parts/
+requirements.txt
 sdist/
 var/
 wheels/
